# ebooklib-autoupdate

./: .gitignore  README.md  VERSION.txt  pyproject.toml  setup.py
.github/actions/update-files/: action.yml
.github/workflows/: auto-update.yml  local-sync.yml  update-files.yml
.scripts/: download_license_data.py  update_packaging.py  update_readme.py  update_setup.py
