[project]
name = "ebooklib-autoupdate"
version = "0.18.1"
description = "Ebook library which can handle EPUB2/EPUB3"
readme = "README.md"
requires-python = ">=3.6"
license = "AGPL-3.0-only"
authors = [
    { name = "Aleksandar Erkalovic", email = "aerkalov@gmail.com" }
    ]
keywords = ["ebook", "epub"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "lxml>=4.9.0",
    "six>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/aleksandar-erkalovic/ebooklib"
"Documentation" = "https://ebooklib.readthedocs.io"

[dependency-groups]
workflow = [
    "tomlkit>=0.11.6",
]
